# RK2206_Practice_Kit

./: README.md
ADC/b6_adc_mq2/: ADC-烟雾传感器.md  BUILD.gn  mq2_example.c
ADC/b6_adc_mq2/include/: mq2.h
ADC/b6_adc_mq2/src/: mq2.c
GPIO/b10_gpio_distance/: BUILD.gn  GPIO-超声波传感.md  README.md
GPIO/b10_gpio_distance/include/: hcsr04.h
GPIO/b10_gpio_distance/src/: hcsr04.c
GPIO/b2_gpio_rgb/: BUILD.gn  GPIO-RGB.md  rgb_example.c
GPIO/b2_gpio_rgb/include/: rgb.h
GPIO/b2_gpio_rgb/src/: rgb.c
GPIO/b7_gpio_fire/: BUILD.gn  GPIO-火焰传感器.md  fire_example.c
GPIO/b7_gpio_fire/include/: fire.h
GPIO/b7_gpio_fire/src/: fire.c
GPIO/b8_gpio_body/: BUILD.gn  GPIO-人体感应传感器.md  body_example.c
GPIO/b8_gpio_body/include/: hcsr501.h
GPIO/b8_gpio_body/src/: hcsr501.c
I2C/b4_i2c_ens160/: BUILD.gn  I2C-二氧化碳传感器.md  ens160_example.c
I2C/b4_i2c_ens160/include/: ens160.h
I2C/b4_i2c_ens160/src/: ens160.c
I2C/b5_i2c_sht40/: BUILD.gn  I2C-温湿度传感器.md  sht40_example.c
I2C/b5_i2c_sht40/include/: sht40.h
I2C/b5_i2c_sht40/src/: sht40.c
I2C/b9_i2c_veml7700/: BUILD.gn  I2C-光照传感器.md  veml7700_example.c
I2C/b9_i2c_veml7700/include/: veml7700.h
I2C/b9_i2c_veml7700/src/: veml7700.c
PWM/b1_pwm_sg90/: BUILD.gn  PWM-SG90舵机.md  sg90_example.c
PWM/b1_pwm_sg90/include/: sg90.h
PWM/b1_pwm_sg90/src/: sg90.c
PWM/b3_pwm_beep/: BUILD.gn  PWM-蜂鸣器.md  beep_example.c
PWM/b3_pwm_beep/include/: beep.h
PWM/b3_pwm_beep/src/: beep.c
SPI/b11_spi_rfid/: BUILD.gn  SPI-射频模块.md  rfid_example.c
SPI/b11_spi_rfid/include/: rc522.h
SPI/b11_spi_rfid/src/: rc522.c
UART/: RK2206实训箱-UART设备开发.pptx
UART/b12_iot_uart/: BUILD.gn  UART-串口通信.md  iot_uart_example.c
