import("//device/rockchip/rk2206/sdk_liteos/board.gni")

static_library("rfid_example") {
  sources = [
    "rfid_example.c",
    "src/rc522.c",
  ]

  include_dirs = [
    "//utils/native/lite/include",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//device/rockchip/rk2206/adapter/include",
    "//device/rockchip/hardware/lib/hal/inc",
    "//device/rockchip/rk2206/sdk_liteos/board/include",
    "//device/rockchip/hardware/lib/CMSIS/Device/RK2206/Include",
    "//third_party/musl/porting/liteos_m/kernel/include",
    "include",
  ]

  deps = [
    "//device/rockchip/hardware:hardware",
    "//kernel/liteos_m/kal/posix",
  ]
}
